@@ -7,16 +7,21 @@ plugins {
 
 dependencies {
     implementation project(":opendcs")
-    testRuntimeOnly project(":opendcs-slf4j-provider");
     implementation project(":testing:fixtures")
     testImplementation enforcedPlatform(libs.junit.bom)
     testImplementation(libs.bundles.junit)
+    testImplementation(libs.bundles.junit.platform)
+    testImplementation(libs.ch.qos.logback)
+    testImplementation(project(":opendcs-logback-event-provider"))
     testImplementation(libs.commons.io)
     testImplementation(libs.apache.derby)
     testImplementation(libs.io.github.hakky54)
     testImplementation(libs.webcompere.system.stubs.jupiter)
 }
 
+test {
+    jvmArgs += "-Djava.security.manager=allow"
+}
 
 jacocoTestReport {
     dependsOn test
